--- a/views/wechat/photo.html
+++ b/views/wechat/photo.html
@@ -11,6 +11,8 @@
 <div class="print" id="write">
     <p>时光不老，我们不散；繁华落幕，我陪你落日流年</p>
 </div>
+{% endblock %}
 
+{% block script%}
 <script src="/wechatStatic/js/photo/photo.js"></script>
 {% endblock %}
