--- a/views/wechat/tools.html
+++ b/views/wechat/tools.html
@@ -16,7 +16,9 @@
         <li class="talk"><a href="/wechat/talk">语音对话</a></li>
     </ol>
 </div>
+{% endblock %}
 
+{% block script %}
 <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="/commonStatic/js/common.js"></script>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
