--- a/views/wechat/upload.html
+++ b/views/wechat/upload.html
@@ -19,6 +19,9 @@
         <input style="display:none;" type="submit" id="sub"/>
     </form>
 </div>
+{% endblock %}
+
+{% block script %}
 <script>
     $("#fileBtn").click(function(){
         $("#inpFile").click();
