--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -9,6 +9,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="format-detection" content="telephone=no">
     <link type="text/css" rel="stylesheet" href="/wechatStatic/css/base.css"/>
+    <link type="text/css" rel="stylesheet" href="/commonStatic/css/spop.min.css"/>
     {% block css %} {% endblock %}
 </head>
 <body>
@@ -17,6 +18,7 @@
 
 {% endblock %}
 <script type="text/javascript" src="/commonStatic/js/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="/commonStatic/js/spop.min.js"></script>
 <script type="text/javascript" src="/commonStatic/js/effects-mk.js"></script>
 <script type="text/javascript" src="/wechatStatic/js/constant.js"></script>
 {% block script %}{% endblock %}
