--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -18,8 +18,12 @@
 
 {% endblock %}
 <script type="text/javascript" src="/commonStatic/js/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/javascript" src="/wechatStatic/js/common/wechat.check.config.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/commonStatic/js/spop.min.js"></script>
 <script type="text/javascript" src="/commonStatic/js/effects-mk.js"></script>
+<script type="text/javascript" src="/commonStatic/js/common.js"></script>
 <script type="text/javascript" src="/wechatStatic/js/constant.js"></script>
 {% block script %}{% endblock %}
 <script>
