--- a/views/wechat/auth.html
+++ b/views/wechat/auth.html
@@ -109,7 +109,7 @@
                 }
                 if(result.code === '40002'){
                     spop({
-                        template: "你之前有认证过，所以要使用之前的昵称哦~",
+                        template: "你之前有认证过哟，请使用之前的昵称~",
                         position: 'bottom-center',
                         style: 'error',
                         autoclose: CLOSE_MSG_BOX_TIME,
