--- a/views/blog/baseBlog.html
+++ b/views/blog/baseBlog.html
@@ -102,6 +102,7 @@
 {% endblock %}
 <script type="text/javascript" src="/commonStatic/js/jquery-1.12.4.min.js"></script>
 <script type="text/javascript" src="/commonStatic/js/common.js"></script>
+<script type="text/javascript" src="/commonStatic/js/constant.js"></script>
 {% block script %}{% endblock %}
 </body>
 </html>
