--- a/views/blog/moodBlog.html
+++ b/views/blog/moodBlog.html
@@ -1,6 +1,6 @@
 {% extends 'baseBlog.html' %}
 
-{% block link %}
+{% block css %}
 <link type="text/css" rel="stylesheet" href="/blogStatic/css/moodBlog.css">
 {% endblock %}
 d
