--- a/views/blog/wayBlog.html
+++ b/views/blog/wayBlog.html
@@ -1,6 +1,6 @@
 {% extends 'baseBlog.html' %}
 {% block title %}{{title}}{% endblock %}
-{% block link %}
+{% block css %}
 <link type="text/css" rel="stylesheet" href="/blogStatic/css/wayBlog.css">
 {% endblock %}
 {% block content_left %}
