--- a/views/blog/articleBlog.html
+++ b/views/blog/articleBlog.html
@@ -1,5 +1,5 @@
 {% extends 'baseBlog.html' %}
-{% block link %}
+{% block css %}
 <link type="text/css" rel="stylesheet" href="/blogStatic/css/articleBlog.css">
 {% endblock %}
 {% block content_left %}
