--- a/views/blog/baseBlog.html
+++ b/views/blog/baseBlog.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Maker" />
     <link type="text/css" rel="stylesheet" href="/blogStatic/css/base.css">
     <link type="text/css" rel="stylesheet" href="/blogStatic/css/common.css">
-    {% block link %}{% endblock %}
+    {% block css %}{% endblock %}
 </head>
 <body>
 {% block body %}
