--- a/public/blogStatic/css/moodBlog.css
+++ b/public/blogStatic/css/moodBlog.css
@@ -19,6 +19,7 @@
 .wrapper .content ul li p.img{width:300px;height: 300px;top:30px;right:50px;background:url(../images/line.png);overflow: hidden;}
 .wrapper .content ul li p.img img{margin:30px;width:240px;height:240px;border-radius:12px;}
 .wrapper .content ul li p.talk time{display:block;margin-top:40px;}
+.wrapper .content ul li p.talk time strong{color:#FF6729;font-size: 20px;}
 .wrapper .content ul li:nth-child(even) p.talk{right:60px;background:url(../images/moodtkr.png) no-repeat right bottom;}
 .wrapper .content ul li:nth-child(odd) p.talk{left:60px;}
 .wrapper .content ul li:nth-child(even) p.talk time{text-align:right;}
