--- a/views/blog/login.html
+++ b/views/blog/login.html
@@ -1,7 +1,7 @@
 {% extends 'baseBlog.html' %}
 
 {% block title%}登录{% endblock %}
-{% block link %}
+{% block css %}
 <link type="text/css" rel="stylesheet" href="/commonStatic/css/animate.css">
 <style>
 
