--- a/views/blog/baseBlog.html
+++ b/views/blog/baseBlog.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>{% block title%} {{data.theme}}-{{data.title}} {% endblock %}</title>
+    <title>{% block title%} Mk {% endblock %}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="" />
     <meta name="description" content="" />
