--- a/public/blogStatic/css/indexBlog.css
+++ b/public/blogStatic/css/indexBlog.css
@@ -1,7 +1,7 @@
 body{background:#F7FAF3;}
 /*模块1*/
 .wrapper{overflow:hidden;}
-.wrapper .spring{width:100%;height:auto;background:url(../images/page1.jpg) no-repeat center top;background-size:100%;}
+.wrapper .spring{width:100%;height:auto;background:url(../images/page1.jpg) no-repeat center top;background-size:1500px;}
 .wrapper .spring .title{color:#79A0A5;top:2%;left:20%;text-shadow: 2px 2px 6px rgba(0,0,0,.3);font-family: myFont;font-size:18px;}
 .wrapper .spring .motto{width:300px;}
 .wrapper .spring:before{content:"";position:absolute;width:100%;height:433px;z-index:2;}
