--- a/views/blog/modelTwo.html
+++ b/views/blog/modelTwo.html
@@ -3,7 +3,7 @@
 		<h1 class="blogTitle">{{title}}</h1>
 		<p class="motto">{{data.motto}}</p>
 	</div>
-	<canvas id="animate" style="width:100%;height:265px;"></canvas>
+	<div style="width:100%;height:265px;"><canvas id="animate" style="position: absolute;left: 50%;margin-left: -388px;"></canvas></div>
 	<!--<embed id="ls" class="willow abs" src="/blogStatic/images/flash/willow.swf" width="600" height="400" wmode=transparent type='application/x-shockwave-flash'></embed>
 
 	<embed id="swf" src="/blogStatic/images/flash/top.swf" width="100%" height="265" wmode=transparent type='application/x-shockwave-flash'></embed>-->
@@ -36,8 +36,5 @@
 <script src="/plugin/swfToCanvas/fanvas3-min.js"></script>
 <script src="/plugin/swfToCanvas/swfData.js"></script>
 <script>
-    function init() {
-        fanvas.play('animate', swfData, {cache:1, autoPlay:true, onFrame:null});
-    }
-    init();
+    fanvas.play('animate', swfData, {scale:0.85});
 </script>
