--- a/views/blog/indexBlog.html
+++ b/views/blog/indexBlog.html
@@ -21,15 +21,15 @@
             <ul>
                 {% for art in artic %}
                 <li>
-                    <h4><a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.Id}}">{{art.title}}</a></h4>
+                    <h4><a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.id}}">{{art.title}}</a></h4>
                     <div class="artCont clear">
-                        <a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.Id}}" class="img"><img src="{{art.imgpath}}"></a>
-                        <p>{{art.descont}}</p>
-                        <a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.Id}}" class="button">阅读全文</a>
+                        <a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.id}}" class="img"><img src="{{art.imgpath}}"></a>
+                        <p>{{art.content}}</p>
+                        <a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/blog?id={{art.id}}" class="button">阅读全文</a>
                     </div>
                     <div class="artMess">
-                        <dl><dd><time>{{art.time|date('Y-m-d', -480)}}</time></dd><dd>作者：陈蜜</dd><dd>个人博客：[<a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/type?name={{art.typenm}}">
-                            {{art.typenm}}</a>]</dd></dl>
+                        <dl><dd><time>{{art.create_time|date('Y-m-d', -480)}}</time></dd><dd>作者：{{art.author}}/dd><dd>个人博客：[<a href="/{% if art.type == '1' %}lway{% else %}life{% endif %}/type?name={{art.type}}">
+                            {{art.type}}</a>]</dd></dl>
                     </div>
                 </li>
                 {% endfor %}
