移动端基础模版添加动画样式文件链接

--- a/views/wechat/base.html
+++ b/views/wechat/base.html
@@ -9,6 +9,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="format-detection" content="telephone=no">
     <link type="text/css" rel="stylesheet" href="/wechatStatic/css/base.css"/>
+    <link type="text/css" rel="stylesheet" href="/commonStatic/css/animate.min.css"/>
     <link type="text/css" rel="stylesheet" href="/commonStatic/css/spop.min.css"/>
     {% block css %} {% endblock %}
 </head>
