移动端主页

--- a/views/wechat/home.html
+++ b/views/wechat/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} {{title}} {% endblock %}
+{% block title %} 个人主页 {% endblock %}
 {% block css %}
 <link type="text/css" rel="stylesheet" href="/wechatStatic/css/home.css"/>
 {% endblock %}
